<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ajustes.AjustesFragment">


    <TextView
        android:id="@+id/textoAjustes"
        android:layout_width="199dp"
        android:layout_height="34dp"
        android:text="Edita tu usuario"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/cambiarNomUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.684"></TextView>

    <EditText
        android:id="@+id/cambiarNomUsuario"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:layout_marginBottom="44dp"
        android:autofillHints="Nombre usuario"
        android:background="@drawable/edit_text_style"
        android:hint="Nombre de usuario"

        android:inputType="text"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/cambiarEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/cambiarEmail"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:layout_marginBottom="48dp"
        android:autofillHints="Email"
        android:background="@drawable/edit_text_style"
        android:hint="Email"

        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/cambiarPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/cambiarPassword"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:autofillHints="Contraseña"
        android:background="@drawable/edit_text_style"

        android:hint="Contraseña"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/b_aplicarCambios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_aplicarCambios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Aplicar cambios"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63" />

    <Button
        android:id="@+id/b_csesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cerrar sesión"
        android:backgroundTint="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.735" />

    <Button
        android:id="@+id/b_BorrarCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="Borrar cuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.843" />

</androidx.constraintlayout.widget.ConstraintLayout>