<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home"
        android:title="Home"/>
    <item android:id="@+id/tracingFragment"
        android:icon="@drawable/ic_seguimiento"
        android:title="Seguimiento"/>
    <item android:id="@+id/ajustesFragment"
        android:icon="@drawable/ic_baseline_manage_accounts_24"
        android:title="Usuario"/>
    <item android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_baseline_settings"
        android:title="Ajustes"/>
</menu>